testdata/baselines/reference/submodule/conformance/untypedModuleImport_noImplicitAny_relativePath.errors.txt
/a.ts(1,22): error TS2307: Cannot find module './node_modules/foo' or its corresponding type declarations.


==== /a.ts (1 errors) ====
    import * as foo from "./node_modules/foo";
                         ~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './node_modules/foo' or its corresponding type declarations.
    
==== /node_modules/foo/package.json (0 errors) ====
    { "name": "foo", "version": "1.2.3" }
    
==== /node_modules/foo/index.js (0 errors) ====
    This file is not processed.
    